# expert

./: README.md  pyproject.toml
.claude/skills/expert/: SKILL.md
entries/2026/05/08/: expert-cli-and-skill-end-to-end-milestone.md
entries/2026/05/09/: expert-mcp-server-zero-cost-query-architecture.md
entries/2026/05/12/: expert-service-sprint-citation-quality-chat-ui-langfuse-observability.md
expert_cli/: __init__.py  auth.py  cli.py  client.py  config.py  mcp_server.py  synthesis.py
