[project]
name = "expert"
version = "0.1.0"
description = "CLI client for expert-service — ask questions, search beliefs, list projects"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0",
]

[project.scripts]
expert = "expert_cli.cli:main"
expert-mcp = "expert_cli.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expert_cli"]
